--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<img style="height: 450px" src="IslandBuds.png" class="center">  
+<img style="height: 450px" src="islandBuds.png" class="center">  
 
 
 <Header> <H1> Welcome to Island Buds Pharmaceuticals </H1></Header>
